<resources>
    <string name="app_name">FarmBnB</string>

    <string name="title_homepage">Welcome to FarmBnB</string>
    <string name="title_viewbookings">Your bookings</string>
    <string name="title_viewaccommodation">Available accommodation</string>
    <string name="title_createbooking">Add a booking</string>
    <string name="title_viewpastbookings">Your past bookings</string>

    <string name="title_farmhousebeds">Farmhouse bedrooms</string>
    <string name="title_barn">Barn</string>
    <string name="title_shepherdshut">Shepherd\'s Hut</string>

    <string name="btnText_createbooking">Make a booking</string>
    <string name="btnText_viewbookings">View your bookings</string>
    <string name="btnText_viewaccomm">View accommodation</string>

    <string name="label_accommname">Accommodation name</string>
    <string name="label_arrivaldate">Arrival date (dd/mm/yy)</string>
    <string name="label_departuredate">Departure date (dd/mm/yy)</string>
    <string name="label_phoneno">Phone No.</string>
    <string name="label_customername">Full name</string>
    <string name="label_address">Address</string>
    <string name="btnText_cfmbooking">Confirm booking</string>

    <string name="btnText_next">Next</string>
    <string name="btnText_prev">Back</string>

    <string name="navTitle_home">Home</string>
    <string name="navTitle_addbooking">Add a booking</string>
    <string name="navTitle_viewbookings">View bookings</string>

    <string name="label_catering">Catering</string>
    <string name="label_capacity">Capacity</string>
    <string name="label_status">Status</string>
    <string name="btnText_viewmore">View more details</string>

    <string name="info_capacity_fmhouse">2</string>
    <string name="info_catering_fmhouse">Bed and breakfast</string>
    <string name="info_status_all">Bookable</string>

    <string name="info_capacity_barn">8</string>
    <string name="info_catering_barn">Self-catering</string>

    <string name="info_capacity_shepherdshut">2</string>
    <string name="info_catering_shepherdshut">Catering available</string>

    <string name="label_bookingid">Booking ID</string>
    <string name="label_accommnameBooking">Accomm. name</string>
    <string name="label_arrdateBooking">Arrival date</string>
    <string name="label_depdateBooking">Departure date</string>

    <string name="label_example_currentbooking">Barn - 20/11/21</string>
    <string name="label_example_pastbooking">Shepherd\'s Hut - 07/08/21</string>

    <string name="info_bookingid_currentexample">153</string>
    <string name="info_accommname_currentexample">Barn</string>
    <string name="info_arrdate_currentexample">20/11/21</string>
    <string name="info_depdate_currentexample">27/11/21</string>

    <string name="info_bookingid_pastexample">74</string>
    <string name="info_accommname_pastexample">Shepherd\'s Hut</string>
    <string name="info_arrdate_pastexample">07/08/21</string>
    <string name="info_depdate_pastexample">14/08/21</string>

    <string name="btnText_details">Details</string>
</resources>