<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_homepage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/averia_serif_libre_light"
        android:text="@string/title_homepage"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/btn_createbooking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btnText_createbooking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_homepage_title" />

    <Button
        android:id="@+id/btn_viewcurrentbookings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btnText_viewbookings"
        app:layout_constraintEnd_toEndOf="@+id/btn_createbooking"
        app:layout_constraintStart_toStartOf="@+id/btn_createbooking"
        app:layout_constraintTop_toBottomOf="@+id/btn_createbooking" />

    <Button
        android:id="@+id/btn_accommodation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btnText_viewaccomm"
        app:layout_constraintEnd_toEndOf="@+id/btn_viewcurrentbookings"
        app:layout_constraintStart_toStartOf="@+id/btn_viewcurrentbookings"
        app:layout_constraintTop_toBottomOf="@+id/btn_viewcurrentbookings" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/greenSecondary"
        app:itemIconTint="@color/icon_colours"
        app:itemTextColor="@color/icon_colours"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>