<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBG"
    tools:context=".AccommodationPg2">

    <TextView
        android:id="@+id/txt_accommodation_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/averia_serif_libre_light"
        android:text="@string/title_viewaccommodation"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/greenSecondary"
        app:itemIconTint="@color/icon_colours"
        app:itemTextColor="@color/icon_colours"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menuhome" />

    <ImageView
        android:id="@+id/img_barn_main"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_accommodation_title"
        app:srcCompat="@drawable/barn" />

    <TextView
        android:id="@+id/lbl_barn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_barn"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/img_barn_main"
        app:layout_constraintStart_toStartOf="@+id/img_barn_main"
        app:layout_constraintTop_toBottomOf="@+id/img_barn_main" />

    <Button
        android:id="@+id/btn_moredetails_barn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btnText_viewmore"
        app:layout_constraintEnd_toEndOf="@+id/lbl_barn"
        app:layout_constraintStart_toStartOf="@+id/lbl_barn"
        app:layout_constraintTop_toBottomOf="@+id/lbl_barn" />

    <Button
        android:id="@+id/btn_next_pg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/btnText_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_moredetails_barn"
        app:layout_constraintTop_toBottomOf="@+id/lbl_barn" />

    <Button
        android:id="@+id/btn_prev_pg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:text="@string/btnText_prev"
        app:layout_constraintEnd_toStartOf="@+id/btn_moredetails_barn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_barn" />

</androidx.constraintlayout.widget.ConstraintLayout>